# multibody_simulation_cuda

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
include/: common_cpu.hpp  common_gpu.cuh  simulation_cpu.cuh  simulation_gpu.cuh
src/: common_gpu.cu  simulation_gpu.cu
